footer nav bug on mobile

--- a/src/css-dev/molecules/_sectionFooter.scss
+++ b/src/css-dev/molecules/_sectionFooter.scss
@@ -7,6 +7,7 @@
       gap: 15px;
       grid-auto-columns: max-content;
       grid-auto-flow: column dense;
+      grid-template-rows: 40px;
       position: fixed;
       right: 0;
       transform-origin: 100% 0;
@@ -21,6 +22,7 @@
    &__navLink {
       @include pseudo-link();
       @include theme-text();
+      display: block;
       font-size: var(--fontSize-10);
       font-weight: 600;
       text-transform: uppercase;
